tests/fail/elaboration/unification/mismatch/arrow-both.snap
stdout = ''
stderr = '''
error: mismatched types
  ┌─ tests/fail/elaboration/unification/mismatch/arrow-both.fathom:3:34
  │
3 │ fun (A : Type) -> fun (a : A) -> a -> a
  │                                  ^ type mismatch, expected `Type`, found `A`
  │
  = expected `Type`
       found `A`

error: mismatched types
  ┌─ tests/fail/elaboration/unification/mismatch/arrow-both.fathom:3:39
  │
3 │ fun (A : Type) -> fun (a : A) -> a -> a
  │                                       ^ type mismatch, expected `Type`, found `A`
  │
  = expected `Type`
       found `A`

'''
